Add Icon component

--- a/packages/css-packs/styles-utils/src/colors.scss
+++ b/packages/css-packs/styles-utils/src/colors.scss
@@ -19,6 +19,7 @@ $grey-dark: hsl(0, 0%, 29%) !default;
 $grey: hsl(0, 0%, 55%) !default;
 $grey-light: hsl(0, 0%, 71%) !default;
 $grey-lighter: hsl(0, 0%, 86%) !default;
+$grey-lightest: hsl(0, 0%, 96%) !default;
 
 $purple: #ab47bc !default;
 $purple-dark: #790e8b !default;
