--- a/packages/css-packs/styles-utils/src/switch.scss
+++ b/packages/css-packs/styles-utils/src/switch.scss
@@ -1,7 +1,8 @@
-$mb-switch-checked-icon-bg: $grean-light !default;
-$mb-switch-checked-bar-bg: rgba($green, 0.5) !default;
-$mb-switch-unchecked-icon-bg: rgb(250, 250, 250) !default;
-$mb-switch-unchecked-bar-bg: $grey !default;
-$mb-switch-disabled-icon-color: $grey-light !default;
-$mb-switch-disabled-bar-color: rgba($grey, 0.19) !default;
+$mb-switch-checked-icon-border: $green !default;
+$mb-switch-checked-bar-bg: $green !default;
+$mb-switch-unchecked-icon-bg: $white !default;
+$mb-switch-unchecked-icon-border: $blue-grey-dark !default;
+$mb-switch-unchecked-bar-bg: $blue-grey-dark !default;
+$mb-switch-disabled-icon-border: $grey-light !default;
+$mb-switch-disabled-bar-bg: rgba($grey, 0.19) !default;
 $mb-switch-label: $grey;
