--- a/website/src/styles/base/generic.css
+++ b/website/src/styles/base/generic.css
@@ -5,6 +5,8 @@
   line-height: var(--line-height);
   font-family: var(--font-text);
   text-transform: none;
+  font-weight: 400;
+  font-style: normal;
 }
 
 html {
@@ -16,4 +18,6 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   background: inherit;
+  display: flex;
+  flex-direction: column;
 }
