--- a/website/src/styles/layout/wrappers.css
+++ b/website/src/styles/layout/wrappers.css
@@ -4,13 +4,18 @@
   }
 
   &.Content {
-    width: 770px;
+    width: var(--content-width);
     padding-top: 33px;
     padding-left: 32px;
     position: relative;
+    overflow-x: visible;
   }
 }
 
 .docs {
-  grid-template-columns: minmax(var(--sidebar-minwidth), calc(50% - 299px)) 865px 1fr;
+  width: 100%;
+  height: 100%;
+  grid-template-columns:
+    minmax(var(--sidebar-minwidth), calc(50% - var(--sidebar-width)))
+    var(--content-width) 1fr;
 }
