--- a/packages/styles/src/typography.pcss
+++ b/packages/styles/src/typography.pcss
@@ -1,10 +1,10 @@
-$h1-font-size: 2rem;
-$h2-font-size: 1.8rem;
-$h3-font-size: 1.6rem;
-$h4-font-size: 1.4rem;
-$h5-font-size: 1.2rem;
-$h6-font-size: 1rem;
-$p-font-size: 1rem;
+$h1-size: 2rem;
+$h2-size: 1.8rem;
+$h3-size: 1.6rem;
+$h4-size: 1.4rem;
+$h5-size: 1.2rem;
+$h6-size: 1rem;
+$p-size: 1rem;
 
 h1,
 h2,
@@ -16,7 +16,6 @@ h6 {
   line-height: 1.1;
 }
 
-// Header Styles
 h1 a,
 h2 a,
 h3 a,
@@ -27,41 +26,41 @@ h6 a {
 }
 
 h1 {
-  margin: ($h1-font-size / 2) 0 ($h1-font-size / 2.5);
-  font-size: $h1-font-size;
+  margin: ($h1-size / 2) 0 ($h1-size / 2.5);
+  font-size: $h1-size;
   line-height: 110%;
 }
 
 h2 {
-  margin: ($h2-font-size / 2) 0 ($h2-font-size / 2.5);
-  font-size: $h2-font-size;
+  margin: ($h2-size / 2) 0 ($h2-size / 2.5);
+  font-size: $h2-size;
   line-height: 110%;
 }
 
 h3 {
-  margin: ($h3-font-size / 2) 0 ($h3-font-size / 2.5);
-  font-size: $h3-font-size;
+  margin: ($h3-size / 2) 0 ($h3-size / 2.5);
+  font-size: $h3-size;
   line-height: 110%;
 }
 
 h4 {
-  margin: ($h4-font-size / 2) 0 ($h4-font-size / 2.5);
-  font-size: $h4-font-size;
+  margin: ($h4-size / 2) 0 ($h4-size / 2.5);
+  font-size: $h4-size;
   line-height: 110%;
 }
 
 h5 {
-  margin: ($h5-font-size / 2) 0 ($h5-font-size / 2.5);
-  font-size: $h5-font-size;
+  margin: ($h5-size / 2) 0 ($h5-size / 2.5);
+  font-size: $h5-size;
   line-height: 110%;
 }
 
 h6 {
-  margin: ($h6-font-size / 2) 0 ($h6-font-size / 2.5);
-  font-size: $h6-font-size;
+  margin: ($h6-size / 2) 0 ($h6-size / 2.5);
+  font-size: $h6-size;
   line-height: 110%;
 }
 
 p {
-  font-size: $p-font-size;
+  font-size: $p-size;
 }
