Add stylelint to postcss build step

--- a/packages/styles/src/desktop/base.pcss
+++ b/packages/styles/src/desktop/base.pcss
@@ -3,7 +3,7 @@
 *:not(input),
 *:not(code) input[type='checkbox'],
 input[type='radio'] {
-  // Remove orange selection
+  /* Remove orange selection */
   outline: none;
 }
 
