--- a/docs-sapper/app/components/Toast.html
+++ b/docs-sapper/app/components/Toast.html
@@ -2,31 +2,12 @@
   Site has been updated — tap to reload
 </div>
 
-<style>
-  .toast {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: rgb(170,30,30);
-    color: white;
-    padding: 1em;
-    font-weight: 500;
-    z-index: 99;
-    animation: slide-up 0.4s ease-out;
-  }
-  @keyframes slide-up {
-    0% { transform: translate(0,100%); }
-    100% { transform: translate(0,0); }
-  }
-</style>
-
 <script>
   export default {
     methods: {
       reload() {
         window.location.reload();
-      }
+      },
     },
     setup(Toast) {
       Toast.show = () => {
@@ -36,6 +17,26 @@
         document.body.appendChild(target);
         Toast.show = () => {};
       };
-    }
+    },
   };
 </script>
+
+<style>
+  .toast {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: rgb(170, 30, 30);
+    color: white;
+    padding: 1em;
+    font-weight: 500;
+    z-index: 99;
+    animation: slide-up 0.4s ease-out;
+  }
+  
+  @keyframes slide-up {
+    0% { transform: translate(0, 100%); }
+    100% { transform: translate(0, 0); }
+  }
+</style>
