--- a/docs-sapper/styles/layout/sidebar.css
+++ b/docs-sapper/styles/layout/sidebar.css
@@ -36,7 +36,7 @@
     right: var(--logo-container-right);
 
     & a {
-      background: url('../../assets/logo.svg') no-repeat;
+      background: url('../assets/logo.svg') no-repeat;
       background-position: center center;
       background-size: contain;
       display: inline-block;
