--- a/docs-sapper/styles/elements/code.css
+++ b/docs-sapper/styles/elements/code.css
@@ -53,7 +53,7 @@ pre[class*='language-'] {
   font-family: Source Code Pro, monospace !important;
   color: color-mod(#000c1d alpha(70%));
   font-weight: 600;
-  font-size: 13px;
+  font-size: 13px !important;
   line-height: 19px;
 }
 
