Rename .svelte back to .html

--- a/packages/components/Pos/src/Pos.html
+++ b/packages/components/Pos/src/Pos.html
@@ -17,10 +17,10 @@
 <script>
   export default {
     components: {
-      Printer: './Printer.svelte',
-      Keypad: './Keypad.svelte',
-      Screen: './Screen.svelte',
-      Card: './CreditCard.svelte',
+      Printer: './Printer.html',
+      Keypad: './Keypad.html',
+      Screen: './Screen.html',
+      Card: './CreditCard.html',
     },
   }
 </script>
