--- a/packages/components/Dialog/src/ConfirmationDialog.html
+++ b/packages/components/Dialog/src/ConfirmationDialog.html
@@ -18,7 +18,7 @@
   export default {
     components: {
       RoundIcon,
-      Dialog: './Dialog.svelte',
+      Dialog: './Dialog.html',
     },
     data() {
       return {
