--- a/packages/components/Dialog/src/PromisedDialog.html
+++ b/packages/components/Dialog/src/PromisedDialog.html
@@ -5,7 +5,7 @@
 <script>
   export default {
     components: {
-      Dialog: './Dialog.svelte',
+      Dialog: './Dialog.html',
     },
     data() {
       return {
