--- a/packages/components/Icon/src/RoundIcon.html
+++ b/packages/components/Icon/src/RoundIcon.html
@@ -5,7 +5,7 @@
 <script>
   export default {
     components: {
-      Icon: './Icon.svelte',
+      Icon: './Icon.html',
     },
     data() {
       return {
