--- a/packages/components/Pos/src/Printer.html
+++ b/packages/components/Pos/src/Printer.html
@@ -206,12 +206,12 @@
     overflow-y: scroll;
     z-index: 1;
     padding: 20px 21px 15px 20px;
-    filter: contrast(300%) grayscale(100%) url('#remove-colors-alpha');
+    filter: contrast(300%) grayscale(100%) url(#remove-colors-alpha);
 
     &,
     :global(p) {
       font-size: 11px;
-      font-family: 'Roboto', Arial, sans-serif;
+      font-family: 'Roboto', 'Arial', sans-serif;
       line-height: 1.1;
       -webkit-font-smoothing: none;
     }
