--- a/packages/components/Pos/src/Screen.html
+++ b/packages/components/Pos/src/Screen.html
@@ -112,7 +112,9 @@
 
     .screen :global(.button.is-fixed),
     .screen :global(.dialog) {
+      /* stylelint-disable */
       position: absolute !important;
+      /* stylelint-enable */
     }
   }
 </style>
