--- a/packages/components/Sprite/src/Sprite.html
+++ b/packages/components/Sprite/src/Sprite.html
@@ -1,4 +1,4 @@
-<div class="sprite" ref:sprite style="background-position: {_position}px 0"></div>
+<div class="sprite" ref:sprite style="background-position: {_position}px 0;"></div>
 
 <script>
   const FPS = 60;
