--- a/packages/components/Switch/src/Switch.html
+++ b/packages/components/Switch/src/Switch.html
@@ -55,7 +55,7 @@
     }
 
     /** Checked switch style */
-    &[checked="true"] {
+    &[checked='true'] {
       background-color: $checked-bar-bg;
 
       &::after {
@@ -66,7 +66,7 @@
     }
 
     /** Disabled switch style */
-    &[disabled="true"] {
+    &[disabled='true'] {
       background-color: $disabled-bar-bg;
 
       &::after {
