--- a/packages/components/Pos/src/Keypad.html
+++ b/packages/components/Pos/src/Keypad.html
@@ -68,7 +68,7 @@
     width: 60px;
     height: 30px;
     border: 0;
-    -webkit-appearance: none;
+    appearance: none;
     cursor: pointer;
     background: none;
     border-radius: 8px;
