Promisify Dialog .open() and .close()

--- a/packages/components/Dialog/src/Dialog.html
+++ b/packages/components/Dialog/src/Dialog.html
@@ -1,17 +1,17 @@
 {#if _isOpen}
-  <div class="dialog" {style}>
-    <div class="content -align-{align}">
-      <div class="message">
-        {#if title}
-          <div class="title">{title}</div>
-        {/if}
-        <slot></slot>
-      </div>
-      <div class="extra">
-        <slot name="extra"></slot>
-      </div>
+<div class="dialog" {style}>
+  <div class="content -align-{align}">
+    <div class="message">
+      {#if title}
+      <div class="title">{title}</div>
+      {/if}
+      <slot></slot>
+    </div>
+    <div class="extra">
+      <slot name="extra"></slot>
     </div>
   </div>
+</div>
 {/if}
 
 <script>
@@ -24,48 +24,51 @@
         textColor: '#4a4a4a',
         align: 'center',
         type: 'timed',
-      }
+      };
     },
     computed: {
       style({ bgColor, textColor }) {
-        return `background-color:${bgColor};color:${textColor}`
+        return `background-color:${bgColor};color:${textColor}`;
       },
     },
     methods: {
       open(duration) {
-        this.set({ _isOpen: true })
-        this.fire('open')
+        this.set({ _isOpen: true });
+        this.fire('open');
 
         /** If there's a existant store, let's lock the app */
         if (this.store) {
-          this.store.meta.lockApp(true)
+          this.store.meta.lockApp(true);
         }
 
         if (typeof duration !== 'undefined') {
-          this.close(duration)
+          return this.close(duration);
         }
       },
       close(delay) {
         if (typeof delay !== 'undefined') {
-          return setTimeout(() => this.close(), parseFloat(delay))
+          return new Promise(resolve => setTimeout(() => {
+            this.close();
+            resolve();
+          }, parseFloat(delay)));
         }
 
         /** If there's a existant store, let's unlock the app */
         if (this.store) {
-          this.store.meta.lockApp(false)
+          this.store.meta.lockApp(false);
         }
 
-        this.set({ _isOpen: false })
-        this.fire('close')
+        this.set({ _isOpen: false });
+        this.fire('close');
       },
     },
     ondestroy() {
       /** If the component is being destroyed and the dialog is still opened, let's unlock the app */
       if (this.get()._isOpen && this.store && this.store.get().__meta__.locked) {
-        this.store.meta.lockApp(false)
+        this.store.meta.lockApp(false);
       }
     },
-  }
+  };
 </script>
 
 <style>
