--- a/packages/components/Pos/src/Screen.html
+++ b/packages/components/Pos/src/Screen.html
@@ -47,13 +47,13 @@
 </script>
 
 <style>
-  @media all and (max-width: 480px) {
-    .status-bar {
+  .status-bar {
+    @media (max-width: 480px) {
       display: none;
     }
   }
 
-  @media all and (min-width: 481px) {
+  @media (min-width: 481px) {
     .screen {
       position: absolute;
       top: 231px;
@@ -108,11 +108,6 @@
       color: #fff;
       font-size: 12px;
       font-weight: bold;
-    }
-
-    .screen :global(.button.is-fixed),
-    .screen :global(.dialog) {
-      position: absolute !important;
     }
   }
 </style>
