Enforce chrome a little less....

--- a/packages/components/Pos/src/Pos.html
+++ b/packages/components/Pos/src/Pos.html
@@ -100,12 +100,9 @@
   }
 
   .engine-alert {
-    position: fixed;
+    position: static;
     z-index: 100000;
     width: 100%;
-    top: 50%;
-    left: 0;
-    transform: translateY(-50%);
     padding: 10px 20px;
     background-color: #bf4130;
     color: #fff;
@@ -122,8 +119,8 @@
   }
 
   @keyframes blink {
-    0% { opacity: 0.1; }
-    50% { opacity: 0.8; }
-    100% { opacity: 0.1; }
+    0% { opacity: 0.4; }
+    50% { opacity: 0.9; }
+    100% { opacity: 0.4; }
   }
 </style>
