Add edge exclusion regex

--- a/packages/components/Pos/src/CreditCard.html
+++ b/packages/components/Pos/src/CreditCard.html
@@ -30,7 +30,7 @@
 
 <style>
   .credit-card {
-    @media all and (max-width: 480px) {
+    @media (max-width: 480px) {
       display: none;
     }
   }
