--- a/packages/components/Pos/src/Keypad.html
+++ b/packages/components/Pos/src/Keypad.html
@@ -60,7 +60,7 @@
 
 <style>
   .keypad {
-    @media all and (max-width: 480px) {
+    @media (max-width: 480px) {
       display: none;
     }
   }
