--- a/packages/components/Pos/src/Printer.html
+++ b/packages/components/Pos/src/Printer.html
@@ -117,7 +117,7 @@
   $paper-color: #add8e6;
 
   .printer {
-    @media all and (max-width: 480px) {
+    @media (max-width: 480px) {
       display: none;
     }
   }
