--- a/packages/components/Pos/src/Pos.html
+++ b/packages/components/Pos/src/Pos.html
@@ -35,9 +35,15 @@
       }
     },
     oncreate() {
-      const browserEngine = /webkit/i.test(navigator.userAgent)
-        ? 'webkit'
-        : 'other'
+      const browserEngine =
+      /**
+       * Detect if we're running on a webkit environment.
+       * We check for `edge` because it fakes one.
+       */
+        'WebkitAppearance' in document.documentElement.style &&
+        !/edge/i.test(navigator.userAgent)
+          ? 'webkit'
+          : 'other'
 
       /**
        * Set the render engine to a body attribute
@@ -50,7 +56,7 @@
 </script>
 
 <style>
-  @media all and (min-width: 481px) {
+  @media (min-width: 481px) {
     .wrapper {
       display: flex;
       height: 100vh;
@@ -119,8 +125,14 @@
   }
 
   @keyframes blink {
-    0% { opacity: 0.4; }
-    50% { opacity: 0.9; }
-    100% { opacity: 0.4; }
+    0% {
+      opacity: 0.4;
+    }
+    50% {
+      opacity: 0.9;
+    }
+    100% {
+      opacity: 0.4;
+    }
   }
 </style>
