--- a/packages/components/QRCode/src/QRCode.html
+++ b/packages/components/QRCode/src/QRCode.html
@@ -1,70 +1,70 @@
 <div class="qrcode">
   {#if logo && size !== 'small'}
-    <img src={logo}  alt="" ref:logo/>
+    <div class="logo" style="background-image:url({logo});"></div>
   {/if}
-  <img class="qrimg" ref:qrimg alt="qr code"/>
+  <img class="qr-img" ref:qrImg alt="qr code"/>
 </div>
 
 <script>
   import QR from 'qrious'
 
+  /** Possible QRCode sizes */
   const SIZES = {
     SMALL: 50,
     MEDIUM: 150,
     LARGE: 240,
   }
 
+  /** QR singleton to share between QRCode instances */
+  const qrEl = new QR()
+
   export default {
     data() {
       return {
         size: 'medium',
         level: 'M',
-        foreground: 'black',
+        color: 'black',
         value: '',
         logo: undefined,
-        __qr: {},
       }
     },
-    methods: {
-      createQr() {
-        const qr = new QR(this.getSpecs())
-        this.refs['qrimg'].setAttribute('src', qr.toDataURL('image/jpeg'))
-        this.set({ __qr: qr })
-      },
-      getSpecs() {
-        const specs = this.get()
-        return {
-          size: SIZES[String(specs['size']).toUpperCase()] || 140,
-          foreground: specs['foreground'],
-          value: specs['value'],
-          level: String(specs['level']).toUpperCase() || 'M',
-        }
-      },
-    },
-    oncreate() {
-      this.createQr()
-    },
-    onupdate() {
-      const qr = this.get()['__qr']
-      qr.set(this.getSpecs())
-      this.refs['qrimg'].setAttribute('src', qr.toDataURL('image/jpeg'))
+    onupdate({ current }) {
+      const { size, color, value, level } = current
+      qrEl.set({
+        size: SIZES[String(size).toUpperCase()] || 140,
+        foreground: color,
+        value,
+        level: String(level).toUpperCase() || 'M',
+      })
+      this.refs.qrImg.setAttribute('src', qrEl.toDataURL('image/jpeg'))
     },
   }
 </script>
-
 
 <style>
   .qrcode {
     position: relative;
     display: inline-block;
   }
-  ref:logo {
+
+  .logo {
     position: absolute;
     z-index: 1;
-    width: 25%;
-    height: auto;
+    width: 22%;
+    padding-bottom: 22%;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%)
+    transform: translate(-50%, -50%);
+    background-color: white;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 50%;
+  }
+
+  .qr-img {
+    display: block;
+    max-width: 100%;
+    height: auto;
   }
 </style>
