--- a/packages/components/QRCode/example/Example.html
+++ b/packages/components/QRCode/example/Example.html
@@ -9,9 +9,9 @@
   </div>
   <h1>...and Colors/Size/Logo<span>{'<QRCode color="yourcolorcss" logo="logopath"></QRCode>'}</span></h1>
   <div class="row">
-    <QRCode size="small" logo="./assets/logo.png" color="blue" value="http://stone.com.br"/>
-    <QRCode size="medium" logo="./assets/logo.png" color="red" value="http://stone.com.br"/>
-    <QRCode size="large" logo="./assets/logo.png" color="purple" value="http://stone.com.br"/>
+    <QRCode size="small" logo="./static/logo.png" color="blue" value="http://stone.com.br"/>
+    <QRCode size="medium" logo="./static/logo.png" color="red" value="http://stone.com.br"/>
+    <QRCode size="large" logo="./static/logo.png" color="purple" value="http://stone.com.br"/>
   </div>
   <h1>Error Rate Level<span>{'<QRCode value="OLA" level="H"></QRCode>'}</span></h1>
   <div class="row">
