Format QRCode to new linter configs

--- a/packages/components/Button/src/Button.html
+++ b/packages/components/Button/src/Button.html
@@ -6,11 +6,17 @@
   export default {
     data() {
       return {
+        /** Button size: regular | small | large | full */
         size: 'regular',
+        /** Disable the button */
         disabled: false,
+        /** Make the button fixed at the bottom of the screen */
         bottom: false,
+        /** Text color */
         textColor: '#fff',
+        /** Background color */
         bgColor: '4ebf1a',
+        /** Border color */
         borderColor: null,
       };
     },
