--- a/packages/components/Pos/src/Pos.html
+++ b/packages/components/Pos/src/Pos.html
@@ -29,6 +29,28 @@
       Screen: './Screen.html',
       Card: './CreditCard.html',
     },
+    data() {
+      return {
+        browserEngine: null,
+      };
+    },
+    oncreate() {
+      /**
+       * Detect if we're running on a webkit environment.
+       * We check for `edge` because it fakes one.
+       */
+      const browserEngine = 'WebkitAppearance' in document.documentElement.style
+      && !/edge/i.test(navigator.userAgent)
+        ? 'webkit'
+        : 'other';
+
+      /**
+       * Set the render engine to a body attribute
+       * to make our css a bit smarter since we depend heavily on webkit.
+       * */
+      document.body.setAttribute('engine', browserEngine);
+      this.set({ browserEngine });
+    },
   };
 </script>
 
