--- a/packages/components/Printable/src/Printable.html
+++ b/packages/components/Printable/src/Printable.html
@@ -45,7 +45,7 @@
         STATES,
         state: STATES.IDLE,
         printingPromise: undefined,
-        options: undefined,
+        options: {},
       };
     },
     components: {
@@ -123,7 +123,7 @@
     }
 
     :global(img) {
-      display: block;
+      display: inline-block;
       max-width: 100%;
       height: auto;
     }
