Limit lines to 80 characters. Again...

--- a/packages/styles/src/variables.pcss
+++ b/packages/styles/src/variables.pcss
@@ -1,4 +1,4 @@
 $mamba-font-family: 'Roboto', Arial, sans-serif;
-$mamba-code-font-family: 'SFMono-Medium', 'SF Mono', 'Segoe UI Mono', 'Roboto Mono', 'Ubuntu Mono',
-  Menlo, Courier, monospace;
+$mamba-code-font-family: 'SFMono-Medium', 'SF Mono', 'Segoe UI Mono',
+  'Roboto Mono', 'Ubuntu Mono', Menlo, Courier, monospace;
 $mamba-font-size-default: 14px;
