--- a/packages/components/Barcode/src/Barcode.html
+++ b/packages/components/Barcode/src/Barcode.html
@@ -18,7 +18,7 @@
         barWidth: 1.5,
         height: 100,
         fontSize: 16,
-        data: '',
+        data: '[NO-VALUE]',
         displayValue: true,
       };
     },
