--- a/packages/components/AppBar/src/AppBar.html
+++ b/packages/components/AppBar/src/AppBar.html
@@ -21,7 +21,7 @@
 
   export default {
     components: {
-      Icon: '@mamba/icon',
+      Icon: '@mambasdk/icon',
     },
     data() {
       return {
@@ -85,7 +85,7 @@
 </script>
 
 <style type="text/postcss">
-  @import '@mamba/styles/colors.pcss';
+  @import '@mambasdk/styles/colors.pcss';
 
   $height: 36px;
   $item-horizontal-margin: 8px;
