--- a/packages/components/AppBar/src/AppBarTitle.html
+++ b/packages/components/AppBar/src/AppBarTitle.html
@@ -5,7 +5,7 @@
       if (!previous) {
         if (!this.store) {
           throw new Error(
-            '[@mamba/appbar/title] No svelte store found. Cannot change appbar title.',
+            '[@mambasdk/appbar/title] No svelte store found. Cannot change appbar title.',
           );
         }
 
