--- a/packages/components/Button/example/Example.html
+++ b/packages/components/Button/example/Example.html
@@ -67,7 +67,7 @@
   export default {
     components: {
       Button: '../src',
-      Icon: '@mamba/icon',
+      Icon: '@mambasdk/icon',
     },
   };
 </script>
