--- a/packages/components/Button/src/Button.html
+++ b/packages/components/Button/src/Button.html
@@ -51,7 +51,7 @@
 </script>
 
 <style>
-  @import '@mamba/styles/colors.pcss';
+  @import '@mambasdk/styles/colors.pcss';
 
   button {
     cursor: pointer;
