--- a/packages/components/Dialog/example/Example.html
+++ b/packages/components/Dialog/example/Example.html
@@ -51,7 +51,7 @@
       Dialog,
       PromisedDialog,
       ConfirmationDialog,
-      Sprite: '@mamba/sprite',
+      Sprite: '@mambasdk/sprite',
     },
     methods: {
       refreshPromise() {
