--- a/packages/components/Dialog/src/Modal.html
+++ b/packages/components/Dialog/src/Modal.html
@@ -63,7 +63,7 @@
 </script>
 
 <style>
-  @import '@mamba/styles/colors.pcss';
+  @import '@mambasdk/styles/colors.pcss';
 
   .container {
     position: fixed;
