--- a/packages/components/Collection/example/Example.html
+++ b/packages/components/Collection/example/Example.html
@@ -36,7 +36,7 @@
 </Collection>
 
 <script>
-  import Icon from '@mamba/icon';
+  import Icon from '@mambasdk/icon';
   import { Collection, Row } from '../src/index.js';
 
   export default {
