--- a/packages/components/Icon/example/Example.html
+++ b/packages/components/Icon/example/Example.html
@@ -104,7 +104,7 @@
   export default {
     components: {
       Icon: '../src',
-      RoundIcon: '../src/RoundIcon.svelte',
+      RoundIcon: '../src/RoundIcon.html',
     },
     data() {
       return {
