--- a/packages/components/AppBar/src/AppBar.html
+++ b/packages/components/AppBar/src/AppBar.html
@@ -25,8 +25,8 @@
     },
     data() {
       return {
-        title: null,
         _location: undefined,
+        title: undefined,
         textColor: '#fff',
         bgColor: '#4ebf1a',
       };
